--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "code"]
 	path = code
 	url = https://github.com/jromero132/bachelor_thesis_code
+[submodule "presentation"]
+	path = presentation
+	url = https://github.com/jromero132/bachelor_thesis_presentation/
